fix: prevent position change from appearing scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
   }
 
   html {
-    @apply h-[100%];
+    @apply h-[100%] w-[100vw] overflow-x-hidden;
   }
 
   body {
